Implement support for running a regular runtime test in the standard configuration with the extension

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:dotnet-runtime-test-assistant.selectRuntimeTestPath"
+		"onCommand:dotnet-runtime-test-assistant.selectRuntimeTestPath",
+		"onDebugResolve:rt-runtimetest",
+		"onDebugDynamicConfigurations:rt-runtimetest"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
