--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -41,6 +41,19 @@
 			}
 		},
 		{
+			"type": "npm",
+			"script": "publish-server",
+			"problemMatcher": "$msCompile",
+			"isBackground": false,
+			"presentation": {
+				"reveal": "never",
+				"close": true
+			},
+			"group": {
+				"kind": "build"
+			}
+		},
+		{
 			"label": "Build",
 			"dependsOn": [
 				"Extension - Build",
