Configure and run the linter

--- a/package.json
+++ b/package.json
@@ -244,6 +244,7 @@
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
 		"lint": "eslint src --ext ts",
+		"lint-fix": "eslint src --ext ts --fix",
 		"test": "node ./out/test/runTest.js",
 		"publish-server": "dotnet publish ./src/server/AssistantServer.csproj -o out/server",
 		"watch-server" : "dotnet watch --no-hot-reload --project ./src/server/AssistantServer.csproj publish -o out/server"
