--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     },
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
     "typescript.tsc.autoDetect": "off",
+    "editor.formatOnSave": true,
     "workbench.colorCustomizations": {
         "activityBar.background": "#053145",
         "titleBar.activeBackground": "#084561",
