--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:dotnet-runtime-test-assistant.selectRuntimeTestPath",
 		"onCommand:dotnet-runtime-test-assistant.startServerIfNotStarted",
 		"onDebugResolve:rt-runtimetest",
 		"onDebugDynamicConfigurations:rt-runtimetest",
@@ -32,10 +31,6 @@
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
-			{
-				"command": "dotnet-runtime-test-assistant.selectRuntimeTestPath",
-				"title": "DN/RT-Test: Select runtime test path"
-			},
 			{
 				"command": "dotnet-runtime-test-assistant.startServerIfNotStarted",
 				"title": "DN/RT-Test: Start the assistant server"
@@ -60,16 +55,18 @@
 								],
 								"default": []
 							},
-							"env" : {
+							"env": {
 								"type": "object",
-								"additionalProperties": { "type": "string" },
-								"description" : "Environment variables to set for the target process"
+								"additionalProperties": {
+									"type": "string"
+								},
+								"description": "Environment variables to set for the target process"
 							},
-							"cwd" : {
+							"cwd": {
 								"type": "string",
 								"description": "The working directory for the target process"
 							},
-							"stopAtEntry" : {
+							"stopAtEntry": {
 								"type": "boolean",
 								"description": "true if the debugger should break as soon as the process is started."
 							}
@@ -94,7 +91,7 @@
 				"configurationAttributes": {
 					"launch": {
 						"properties": {
-							"separateConfig" : {
+							"separateConfig": {
 								"type": "boolean",
 								"description": "Run crossgen2 against a System.Private.CoreLib of a different configuration."
 							},
@@ -106,16 +103,18 @@
 								],
 								"default": []
 							},
-							"env" : {
+							"env": {
 								"type": "object",
-								"additionalProperties": { "type": "string" },
-								"description" : "Environment variables to set for the target process"
+								"additionalProperties": {
+									"type": "string"
+								},
+								"description": "Environment variables to set for the target process"
 							},
-							"cwd" : {
+							"cwd": {
 								"type": "string",
 								"description": "The working directory for the target process"
 							},
-							"stopAtEntry" : {
+							"stopAtEntry": {
 								"type": "boolean",
 								"description": "true if the debugger should break as soon as the process is started."
 							}
@@ -140,15 +139,15 @@
 				"configurationAttributes": {
 					"launch": {
 						"properties": {
-							"separateConfig" : {
+							"separateConfig": {
 								"type": "boolean",
 								"description": "Run crossgen2 against a runtime test of a different configuration."
 							},
-							"composite" : {
+							"composite": {
 								"type": "boolean",
 								"description": "Run crossgen2 in composite mode."
 							},
-							"selectReferencedAssembly" : {
+							"selectReferencedAssembly": {
 								"type": "boolean",
 								"description": "Run crossgen2 against an assembly referenced by the runtime test or the runtime test, not only the runtime test itself."
 							},
@@ -160,16 +159,18 @@
 								],
 								"default": []
 							},
-							"env" : {
+							"env": {
 								"type": "object",
-								"additionalProperties": { "type": "string" },
-								"description" : "Environment variables to set for the target process"
+								"additionalProperties": {
+									"type": "string"
+								},
+								"description": "Environment variables to set for the target process"
 							},
-							"cwd" : {
+							"cwd": {
 								"type": "string",
 								"description": "The working directory for the target process"
 							},
-							"stopAtEntry" : {
+							"stopAtEntry": {
 								"type": "boolean",
 								"description": "true if the debugger should break as soon as the process is started."
 							}
@@ -194,10 +195,10 @@
 				"configurationAttributes": {
 					"launch": {
 						"properties": {
-							"outerloop" : {
-								"type" : "boolean",
+							"outerloop": {
+								"type": "boolean",
 								"description": "Run outerloop tests",
-								"default" : false
+								"default": false
 							},
 							"args": {
 								"description": "Program arguments.",
@@ -207,16 +208,18 @@
 								],
 								"default": []
 							},
-							"env" : {
+							"env": {
 								"type": "object",
-								"additionalProperties": { "type": "string" },
-								"description" : "Environment variables to set for the target process"
+								"additionalProperties": {
+									"type": "string"
+								},
+								"description": "Environment variables to set for the target process"
 							},
-							"cwd" : {
+							"cwd": {
 								"type": "string",
 								"description": "The working directory for the target process"
 							},
-							"stopAtEntry" : {
+							"stopAtEntry": {
 								"type": "boolean",
 								"description": "true if the debugger should break as soon as the process is started."
 							}
@@ -237,7 +240,10 @@
 			}
 		]
 	},
-	"extensionDependencies": [ "ms-vscode.cpptools", "vadimcn.vscode-lldb" ],
+	"extensionDependencies": [
+		"ms-vscode.cpptools",
+		"vadimcn.vscode-lldb"
+	],
 	"scripts": {
 		"vscode:prepublish": "npm run compile && npm run publish-server",
 		"compile": "tsc -p ./",
@@ -247,7 +253,7 @@
 		"lint-fix": "eslint src --ext ts --fix",
 		"test": "node ./out/test/runTest.js",
 		"publish-server": "dotnet publish ./src/server/AssistantServer.csproj -o out/server",
-		"watch-server" : "dotnet watch --no-hot-reload --project ./src/server/AssistantServer.csproj publish -o out/server"
+		"watch-server": "dotnet watch --no-hot-reload --project ./src/server/AssistantServer.csproj publish -o out/server"
 	},
 	"dependencies": {
 		"glob": "^7.2.0",
