Enable regenerating the runsettings file for a particular configuration so OmniSharp will run tests against the correct runtime.
Refactor OutputConfiguration into a separate file from userPrompts.

Fixes #8 as best as possible.

This still depends on either the PATH and DOTNET_ROOT being set to the correct folder (like how the -vs flag on the dotnet/runtime build.cmd script has), a global SDK being installed with a new enough version, or https://github.com/OmniSharp/omnisharp-vscode/pull/4738 being implemented.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,6 +23,17 @@
 			"request": "attach"
 		},
 		{
+			"name": "Launch Assistant Server",
+			"type": "coreclr",
+			"request": "launch",
+			"preLaunchTask": "Server - Single Build",
+			"program": "${workspaceFolder}/out/server/AssistantServer.dll",
+			"args": [],
+			"cwd": "${workspaceFolder}/out",
+			"stopAtEntry": true,
+			"console": "internalConsole",
+		},
+		{
 			"name": "Extension Tests",
 			"type": "extensionHost",
 			"request": "launch",
