--- a/package.json
+++ b/package.json
@@ -72,10 +72,10 @@
 							},
 							"args": {
 								"description": "Program arguments.",
-								"type": [
-									"array",
-									"string"
-								],
+								"type": "array",
+								"items": {
+									"type": "string"
+								},
 								"default": []
 							},
 							"env": {
@@ -120,10 +120,10 @@
 							},
 							"args": {
 								"description": "Program arguments.",
-								"type": [
-									"array",
-									"string"
-								],
+								"type": "array",
+								"items": {
+									"type": "string"
+								},
 								"default": []
 							},
 							"env": {
@@ -176,10 +176,10 @@
 							},
 							"args": {
 								"description": "Program arguments.",
-								"type": [
-									"array",
-									"string"
-								],
+								"type": "array",
+								"items": {
+									"type": "string"
+								},
 								"default": []
 							},
 							"env": {
@@ -220,10 +220,10 @@
 						"properties": {
 							"args": {
 								"description": "Program arguments.",
-								"type": [
-									"array",
-									"string"
-								],
+								"type": "array",
+								"items": {
+									"type": "string"
+								},
 								"default": []
 							},
 							"env": {
@@ -269,10 +269,10 @@
 							},
 							"args": {
 								"description": "Program arguments.",
-								"type": [
-									"array",
-									"string"
-								],
+								"type": "array",
+								"items": {
+									"type": "string"
+								},
 								"default": []
 							},
 							"env": {
@@ -347,6 +347,14 @@
 							"CoreCLR",
 							"Mono"
 						]
+					},
+					"args": {
+						"description": "Additional build arguments",
+						"type": "array",
+						"items": {
+							"type": "string"
+						},
+						"default": []
 					}
 				},
 				"when": "shellExecutionSupported"
