Add hostConfiguration option, code cleanup

--- a/package.json
+++ b/package.json
@@ -338,6 +338,13 @@
 							"Release"
 						]
 					},
+					"hostConfiguration": {
+						"type": "string",
+						"enum": [
+							"Debug",
+							"Release"
+						]
+					},
 					"arch": {
 						"type": "string"
 					},
