--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,11 @@ jobs:
       - uses: actions/checkout@v3
       
       - run: npm install
+  
+      - name: Setup .NET Core SDK
+        uses: actions/setup-dotnet@v3.0.1
+        with:
+          dotnet-version: 6.0.x
 
       - name: Build extension
         uses: lannonbr/vsce-action@3.0.0
