--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,4 @@ jobs:
         with:
           dotnet-version: 6.0.x
 
-      - name: Build extension
-        uses: lannonbr/vsce-action@3.0.0
-        with:
-          args: 'package --pre-release'
+      - run: vsce package --pre-release
