--- a/package.json
+++ b/package.json
@@ -398,6 +398,7 @@
 		"@vscode/test-electron": "^2.0.3",
 		"eslint": "^8.6.0",
 		"mocha": "^9.1.3",
-		"typescript": "^4.5.4"
+		"typescript": "^4.5.4",
+		"vsce": "^2.11.0"
 	}
 }
