--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"name": "Jeremy Koritzinsky",
 		"url": "https://github.com/jkoritzinsky"
 	},
+	"publisher": "jkoritzinsky",
 	"version": "0.0.1",
 	"engines": {
 		"vscode": "^1.63.0"
